--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,19 +5,13 @@ body {
     font-family: roboto Condensed;
     margin: 0;
     padding: 0;
+    background-color:rgb(247, 247, 247);
 
-}
 
-/* TITRE*/
-
-h2 {
-    text-align: center;
-    color:blue;
-    font-size: 24px;
 }
 
 p {
-    text-align:center;
+    font: size 20px;
 }
 
 /* container principal  */
@@ -26,8 +20,20 @@ p {
     display: flex;
     flex-direction: column;
     width: 100%;
+   
 
 }
+
+/* TITRE */
+
+.titre {
+    align-items: center;
+    justify-content: center;
+    font-size:  36px;
+    color:  rgb(37, 63, 111);
+    
+}
+
 
 /* HEADER */
 
@@ -39,57 +45,135 @@ p {
     justify-content: space-between;
     width: 100%;
     height: 70px;
-    background-color: cornflowerblue;
-}
-
-.prenom {    
-    background-color:rgb(24, 116, 24);
-}
-
-.profession {
-    background-color:rgb(116, 18, 18);
+    font-size: 24px;
+    color: rgb(37, 63, 111);
+    background-color:#868788;
 }
 
 /* MAIN */
 
 .block1 {
-    /* display: flex; */
+    display: flex;
+    float: left;
     width: 100%;
-    height: 300px;
-    background-image: url(assets/css/img/background.jpeg)
+    height: 500px;
+    margin-top: 70px;
+    font-size :20px;
+    background:url(../img/background.jpeg);
+    background-size: cover;
 }
 
+
 .ssblock1 {
-    width: 33%;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 33.33%;
+    height: 500px;
+}
+
+/* LOGO SSBOCK1 */
+
+.logoAdresse {
+    width: 50%;
+    height: 80px;
+}
+
+.logoTelephone {
+    width: 50%;
+    height: 80px;
+}
+
+.logoEmail {
+    width: 50%;
+    height: 80px;
+}
+
+
+
+.ssblock2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 33.33%;
+    height: 500px;
+
+}
+
+/* LOGO DU SSBOCK2*/
+
+.logo {
+    width:100%;
+    height: 250px;
+}
+
+/* CONTENU */
+
+.ssblock3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 33.33%;
+    height: 500px;
+    font-size :32px;
+    color: rgb(37, 63, 111);
 }
 
 .block2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    font-size: 20px;
     width: 100%;
-    height: 300px;
+    height: 500px;
 }
 
 .block3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size :20px;
     width: 100%;
-    height: 300px;
+    height: 500px;
 }
 
 .block4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
     width: 100%;
-    height: 300px;
+    height: 500px;
 }
 
 .block5 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
     width: 100%;
-    height: 300px;
+    height: 500px;
 }
 
 /* FOOTER */
 
 .block6 {
     display: flex;
-    width: 100%;
-    height: 70px;
     align-items: center;
     justify-content: space-between;
-    background-color: cornflowerblue;
+    width: 100%;
+    height: 70px;
+    font-size: 24px;
+    color: rgb(117, 145, 197);
+    position: relative;
+	box-shadow: 5px -5px 5px 0px #7CACEA;
+    background-color: #E3E6EA;
+
+}
+	
