--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,179 +1,93 @@
-/* BASE */
-
 html,
 body {
-    font-family: roboto Condensed;
     margin: 0;
     padding: 0;
-    background-color:rgb(247, 247, 247);
-
-
-}
-
-p {
-    font: size 20px;
-}
-
-/* container principal  */
-
-.container {
-    display: flex;
-    flex-direction: column;
+    height: 100vh;
     width: 100%;
-   
-
+    font-family: roboto Condensed;
+    background-color: #D3D0CB;
 }
 
-/* TITRE */
+#homeContainer {
+    height: 100vh;
+}
 
-.titre {
-    align-items: center;
-    justify-content: center;
-    font-size:  36px;
-    color:  rgb(37, 63, 111);
-    
+#one {
+    height: 100vh;
+}
+
+#two {
+    height: 100vh;
+}
+
+#three {
+    height: 100vh;
+}
+
+h2 {
+    text-align: center;
+    font-size: 36px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 420x;
 }
 
 
-/* HEADER */
+/* BLOCK1 */
 
-
-.header {
-    display: flex;
-    position: fixed;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 70px;
-    font-size: 24px;
-    color: rgb(37, 63, 111);
-    background-color:#868788;
-}
-
-/* MAIN */
 
 .block1 {
     display: flex;
-    float: left;
+    position: fixed;
+    height: 70px;
     width: 100%;
-    height: 500px;
-    margin-top: 70px;
-    font-size :20px;
-    background:url(../img/background.jpeg);
-    background-size: cover;
+    background: RGB(134, 142, 150, 0.4);
 }
 
-
-.ssblock1 {
+.navbar {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 33.33%;
-    height: 500px;
-}
-
-/* LOGO SSBOCK1 */
-
-.logoAdresse {
-    width: 50%;
-    height: 80px;
-}
-
-.logoTelephone {
-    width: 50%;
-    height: 80px;
-}
-
-.logoEmail {
-    width: 50%;
-    height: 80px;
-}
-
-
-
-.ssblock2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 33.33%;
-    height: 500px;
-
-}
-
-/* LOGO DU SSBOCK2*/
-
-.logo {
-    width:100%;
-    height: 250px;
-}
-
-/* CONTENU */
-
-.ssblock3 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 33.33%;
-    height: 500px;
-    font-size :32px;
-    color: rgb(37, 63, 111);
-}
-
-.block2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; 
-    font-size: 20px;
-    width: 100%;
-    height: 500px;
-}
-
-.block3 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size :20px;
-    width: 100%;
-    height: 500px;
-}
-
-.block4 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    width: 100%;
-    height: 500px;
-}
-
-.block5 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    width: 100%;
-    height: 500px;
-}
-
-/* FOOTER */
-
-.block6 {
-    display: flex;
-    align-items: center;
     justify-content: space-between;
     width: 100%;
     height: 70px;
     font-size: 24px;
-    color: rgb(117, 145, 197);
-    position: relative;
-	box-shadow: 5px -5px 5px 0px #7CACEA;
-    background-color: #E3E6EA;
-
+    color: black;
 }
-	
+
+.metier {
+    display: flex;
+    flex-direction: flex-start;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    width: 33.33%;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    width: 33.33%;
+}
+
+.nom {
+    display: flex;
+    flex-direction: flex-end;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    width: 33.33%;
+}
+
+/* BLOCK2 */
+
+
+.block2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70%;
+    background: url(../img/photo-restaurant.jpeg);
+}
