--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,95 +1,3 @@
-html,
-body {
-    padding: 0;
-    margin: 0;
-    height: 100vh;
-}
-
-
-/* CONTAINER HEADER */
-
-
-#containerheader {
-    height: 40%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url(../img/background.jpeg);
-}
-
-.block1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.block2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.block2 img {
-    height: 70px;
-    width: 70px;
-}
-
-.block3 {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.block4 {
-    display: flex;
-    justify-content: center;
-}
-
-.block4 a {
-    text-decoration: none;
-    color:red;
-}
-
-
-/* CONTAINER CONTENT */
-
-
-#containercontent {
-    height: 60%;
-}
-
-.content1 {
-    display: flex;
-    justify-content: center;
-}
-
-.content2 {
-    display: flex;
-    justify-content: center;
-}
-
-.content3 {
-    display: flex;
-    justify-content: center;
-}
-
-
-/* CONTAINER FOOTER */
-
-
-#containerfooter {
-    height: 10%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url(../img/background.jpeg);
-}
-
-footer {
-    display: flex;
-    justify-content: center;
-}
-
-footer img {
-    height: 70px;
-    width: 70px;
+.container-fluid {
+    background-image: url(assets/img/header-bg.png);
 }
