--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,256 +1,158 @@
-/*STYLES GENERAUX*/
-
-* {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding: 0px;
-    margin: 0px;
-    text-align: justify;
-    box-sizing: border-box;
+body,
+html {
+  height: 100vh;
+  font-family: "Open Sans", sans-serif;
+  background: #444444;
 }
 
-body {
-    background: #ededed;
+h3 {
+  font-size: 32px;
+  font-family: "Satisfy", serif;
+  background-color: #9e9797;
+  color: #eef0f2;
+  font-weight: 700;
+  padding: 15px;
 }
 
-p {
-    font-size: 1em;
-    line-height: 1.5em;
+h3 span {
+  color: #eef0f2;
+  z-index: 1;
+  font-weight: 700;
+  font-size: 52px;
+  line-height: 0;
 }
 
-a {
-    text-decoration: none;
-    color: #000;
-}
-
-/*HEADER & FOOTER*/
-
-header,
-footer {
-    width: 100%;
-    padding: 20px 0px;
-    box-shadow: 0px 0px 15px #333;
-}
-
-header {
-    border-bottom: 2px solid #fff;
-    height: 80px;
-}
-
-header h1 {
-    text-align: center;
-    color: white;
-    font-size: 1.5em;
-    width: 90%;
-    margin: 0 auto;
+a:hover {
+  color: #ffc85a !important;
+  font-size: 25px;
 }
 
 footer {
-    border-top: 2px solid #fff;
+  text-decoration: none !important;
+  font-size: 14px;
+  padding: 80px 0;
+  position: relative;
 }
 
-footer p {
-    width: 90%;
-    margin: 0 auto;
-    color: #fff;
-    text-align: center;
+footer .copyright {
+  margin: 0 0 5px 0;
 }
 
-footer a {
-    color: #fff;
+footer .social-links {
+  margin: 0 0 40px 0;
 }
 
-/*SECTIONS*/
-
-section {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    width: 100%;
-    padding-bottom: 20px;
-    margin: 20px auto;
-    box-shadow: 0px 0px 10px #bbb;
-    background-color: #fff;
+footer .social-links a {
+  padding: 8px 0;
+  width: 36px;
+  height: 36px;
 }
 
-section h2 {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-    width: 90%;
+
+/* ==============SPACE=========== */
+
+#space {
+  background-color: #9e9797;
+  height: 5px;
 }
 
-section>div {
-    width: 90%;
+/* ===================NAVBAR================ */
+/* ========LIEN NAVBAR========= */
+
+.navBarColor a {
+  color: #d3c7ae !important;
+  text-decoration: none;
+  font-size: 25px;
 }
 
-/*SECTION INFOS*/
-
-.presentation {
-    border-bottom: 2px dashed #ccc;
+/* =========LIEN NAVBAR HOVER======= */
+.navBarColor a:hover {
+  color: #ffc85a !important;
+  text-decoration: none;
 }
 
-.presentation a {
-    display: block;
-    text-align: center;
-    padding: 10px;
-    margin: 10px auto 30px auto;
-    color: rgb(27, 23, 23);
-    background-color: rgb(204, 223, 169);
-    box-shadow: 0px 0px 10px rgb(224, 40, 40);
-    border-radius: 5px;
+
+/* ====================HEADER================  */
+
+.dev {
+  font-family: "Satisfy", serif;
 }
 
-.presentation p {
-    display: flex;
-    justify-content: center;
+#accueil {
+  height: 100vh;
 }
 
-.social {
-    display: flex;
-    justify-content: center;
+#accueil h1 {
+  margin: 0 0 10px 0;
+  font-size: 64px;
+  font-family: "Satisfy", serif;
+  color: #fff;
 }
 
-.social img {
-    width: 40px;
-    height: 40px;
-    margin-top: 20px;
+@media (max-width:768px) {
+  #accueil h1 {
+    font-size: 58px;
+  }
+
 }
 
-/*SECTION EXPERIENCES PRO ET FORMATION ET DIPLOMES*/
+@media (max-width:519px) {
+  #accueil h1 {
+    font-size: 54px;
+  }
 
-.exp {
-    display: flex;
-    justify-content: start;
-    border-bottom: 1px solid #bbb;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-    margin-right: 30px;
 }
 
-.exp-info {
-    display: flex;
-    flex-flow: column wrap;
+#accueil h2 {
+  color: #eee;
+  margin-bottom: 35px;
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 
-.exp-info {
-    flex: 0 0 70%;
-    margin-left: auto;
-}
-.exp h4 {
-    font-size: 1em;
-    font-weight: normal;
+@media (max-width:768px) {
+  #accueil h2 {
+    font-size: 23px;
+  }
+
 }
 
-/*SECTION COMPETENCES INFORMATIQUES*/
+@media (max-width:519px) {
+  #accueil h2 {
+    font-size: 14px !important;
+  }
 
-.comp {
-    display: flex;
-    flex-flow: row wrap;
-    margin-bottom: 10px;
 }
 
-.comp p {
-    flex: 0 0 40%;
+.cv {
+  font-size: 25px;
+  font-family: "Satisfy", serif;
 }
 
-.conteneur-barre {
-    flex: 0 0 60%;
-    border-radius: 5px;
-    background-color: grey;
-    border-bottom: 1px ridge grey;
+/* ==================================MAIN========================================= */
+/* ==================PARCOURS=============== */
+
+
+/* =================PORTFOLIO============== */
+
+.img {
+  width: 200px;
+  transition: transform .1s;
 }
 
-.barre {
-    display: block;
-    height: 100%;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+.img:hover {
+  -ms-transform: scale(1.5);
+  /* IE 9 */
+  -webkit-transform: scale(1.5);
+  /* Safari 3-8 */
+  transform: scale(1.5);
 }
 
-.c75 {
-    width: 90%;
-    background-color: #4B8;
-}
+/* ================FOOTER ==================*/
 
-.c80 {
-    width: 45%;
-    background-color: #4B8;
-}
-
-.c85 {
-    width: 70%;
-    background-color: #4B8;
-}
-
-.c90 {
-    width: 3%;
-    background-color: #4B8;
-}
-
-.c95 {
-    width: 3%;
-    background-color: #4B8;
-}
-
-.c100 {
-    width: 10%;
-    background-color: #4B8;
-    border-radius: 5px;
-}
-
-.comp2 {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-}
-
-.conteneur-barre2 {
-    flex: 0 0 100%;
-    height: 0.5em;
-    margin-bottom: 0.25em;
-    border-radius: 5px;
-    background-color: grey;
-}
-
-/*VERSION BUREAU DU CV*/
-@media screen and (min-width: 980px){
-    section{
-        width: 80%;
-        box-shadow: 0px 0px 10px #bbb;
-    }
-    a:hover{
-        color: #EA0;
-    }
-    header h1{
-        width: 80%;
-    }
-
-
-    .presentation {
-        flex: 0 0 45%;
-    }
-
-    .presentation {
-        border-bottom: none;
-        border-right: 2px solid #ccc;
-        padding-right: 20px;
-        margin-left: auto;
-    }
-
-    .presentation a {
-        border: 2px solid transparent;
-    }
-
-    .presentation a:hover {
-        color: #97ca5c;
-        background-color: #fff;
-        border: 2px solid #97ca5c;
-        box-shadow: 0px 0px 20px #666;
-    }
-
-    .exp-info,
-    .exp-desc {
-        flex: 0 0 85%;
-        margin-left: auto;
-    }
+.contact {
+  font-size: 30px;
+  font-family: "Satisfy", serif;
+  font-weight: 700;
 }
