--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@ html {
   background: #444444;
 }
 
+p {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 h3 {
   font-size: 32px;
   font-family: "Satisfy", serif;
@@ -52,7 +56,7 @@ footer .social-links a {
 /* ==============SPACE=========== */
 
 #space {
-  background-color: #9e9797;
+  background-color: #d1c8cc;
   height: 5px;
 }
 
@@ -131,22 +135,31 @@ footer .social-links a {
 }
 
 /* ==================================MAIN========================================= */
+
 /* ==================PARCOURS=============== */
 
+.carwidth {
+  width: 50%;
+}
+
+@media (max-width:769px){
+  .carwidth {
+    width: 100%;
+  }
+  
+}
 
 /* =================PORTFOLIO============== */
 
 .img {
   width: 200px;
-  height: 200px;
+  height: 300px;
   transition: transform .1s;
 }
 
 .img:hover {
   -ms-transform: scale(1.5);
-  /* IE 9 */
   -webkit-transform: scale(1.5);
-  /* Safari 3-8 */
   transform: scale(1.5);
 }
 
