--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ html {
 
 p {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 15px;
 }
 
 h3 {
@@ -124,7 +125,7 @@ footer .social-links a {
 
 @media (max-width:519px) {
   #accueil h2 {
-    font-size: 14px !important;
+    font-size: 23px !important;
   }
 
 }
